--- a/contact.html
+++ b/contact.html
@@ -22,46 +22,12 @@
 <div class="block1 p_bottom_zero">
   <div class="container_12"> 
     <!--==============================header=================================-->
-    <header>
-      <h1><a class="logo" href="index.html"><span class="underline">We</span>e</a></h1>
+    <header class="homepage">
+      <h1><a class="logo" href="index.html">SBTM <span class="underline">Lab.</span></a></h1>
       <nav>
         <ul class="sf-menu">
           <li><a href="index.html">Home</a></li>
-          <li ><a href="services.html">Services</a></li>
-          <li ><a href="javascript:">Projects</a>
-            <ul>
-              <li><a href="project-threecol.html">Three Cols </a></li>
-              <li><a href="project-fourcol.html">Four Cols</a></li>
-              <li><a href="project-details.html">Project Details</a></li>
-            </ul>
-          </li>
-          <li> <a href="javascript:">Pages</a>
-            <ul>
-              <li ><a href="javascript:">Home</a>
-                <ul>
-                  <li><a href="index.html">With Slider</a></li>
-                  <li><a href="index2.html">Second Slider</a></li>
-                  <li><a href="index3.html">Without Slider</a></li>
-                </ul>
-              </li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="javascript:">Pricing</a>
-                <ul>
-                  <li><a href="pricing-threecol.html">Three Cols</a></li>
-                  <li><a href="pricing-fourcol.html">Four Cols</a></li>
-                </ul>
-              </li>
-              <li><a href="components.html">Components</a></li>
-              <li><a href="404.html">404</a></li>
-              <li><a href="faq.html">FAQ</a></li>
-            </ul>
-          </li>
-          <li><a href="javascript:">Blog</a>
-            <ul>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="blog-single.html">Blog Single</a></li>
-            </ul>
-          </li>
+          <li><a href="projects.html">Projects</a></li>
           <li class="current"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -85,20 +51,20 @@
     <section class="content">
       <div class="wrapper">
         <article class="grid_12 last-col">
-          <div class="hello_box"> We love working with clients who love to standout from the crowd. The following contact form is validation ready and this enhances user experience. </div>
+          <div class="hello_box">신입회원은 상시 모집중입니다. 그밖에 어떤 연락이라도 기다리고 있습니다.</div>
         </article>
       </div>
       <div class="wrapper projects">
         <div class="row clearfix">
           <article class="grid_12">
             <div class="gmap">
-              <iframe width="940" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Ocean&amp;sll=37.0625,-95.677068&amp;sspn=36.452734,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Ocean,+New+Jersey&amp;t=m&amp;z=9&amp;ll=39.965255,-74.311821&amp;output=embed"></iframe>
+              <iframe src="https://dna.daum.net/include/tools/routemap/map_view.php?width=940&height=350&latitude=37.56167514355792&longitude=126.93560183202871&contents=%EC%97%B0%EC%84%B8%EB%8C%80%ED%95%99%EA%B5%90+%EC%A0%9C3%EA%B3%B5%ED%95%99%EA%B4%80%3Cbr+%2F%3E%0D%0AC110+%EC%82%AC%EB%B0%9C%ED%86%B5%EB%AC%B8&zoom=3" width="940" height="385" scrolling="no" frameborder="0"></iframe>
             </div>
           </article>
         </div>
         <div class="row clearfix">
           <article class="grid_12">
-            <h2>Reach Us</h2>
+            <h2>문의하기</h2>
             <p>Join us on <a href="#">Facebook</a>, follow us on <a href="#">Twitter</a> & <a href="#">Pinterest</a> for irregular doses of technology, inspiration & creativity. Pay a visit to our blog <a href="http://www.egrappler.com">eGrappler.com</a>.</p>
             <form action="#" method="post" id="cform" name="cform">
               <ul id="homehireus" class="hireform contactform">
