--- a/index.html
+++ b/index.html
@@ -32,34 +32,7 @@
       <nav>
         <ul class="sf-menu">
           <li class="current"><a href="index.html">Home</a></li>
-          <li><a href="project-threecol.html">Three Cols </a></li>
-          <li> <a href="javascript:">Pages</a>
-            <ul>
-              <li><a href="javascript:">Home</a>
-                <ul>
-                  <li><a href="index.html">With Slider</a></li>
-                  <li><a href="index2.html">Second Slider</a></li>
-                  <li><a href="index3.html">Without Slider</a></li>
-                </ul>
-              </li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="javascript:">Pricing</a>
-                <ul>
-                  <li><a href="pricing-threecol.html">Three Cols</a></li>
-                  <li><a href="pricing-fourcol.html">Four Cols</a></li>
-                </ul>
-              </li>
-              <li><a href="components.html">Components</a></li>
-              <li><a href="404.html">404</a></li>
-              <li><a href="faq.html">FAQ</a></li>
-            </ul>
-          </li>
-          <li><a href="javascript:">Blog</a>
-            <ul>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="blog-single.html">Blog Single</a></li>
-            </ul>
-          </li>
+          <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -145,45 +118,45 @@
       </div>
       <div class="wrapper offers_box">
         <article class="grid_3">
-          <h2 class="clearfix"> <span class="f_left">How Wee Work</span> <a id="next" class="next"></a> <a id="prev" class="prev"></a> </h2>
-          <p> We deliver outstanding user experiences through designing and realizing digital solutions. <a href="project-fourcol.html" class="arrowlink">Our Portfolio</a> </p>
+          <h2 class="clearfix"> <span class="f_left">활동</span> <a id="next" class="next"></a> <a id="prev" class="prev"></a> </h2>
+          <p> 사발통문에서는 많은 활동을 합니다. 그 중 대표적인 것들만 소개합니다.</a> </p>
         </article>
         <div class="grid_9">
           <div id="home-services">
             <div class="grid_3">
               <div class="offer"> <img src="images/plan.png" alt="Plan">
                 <div class="title">EE Festival</div>
-                Lorem ipsum dolor sit amet, consect etur adip scing elit. Vestibulum ut tortor urnati dunt dolor. Nunc vulputate ultrices con sect etur donec semper lacinia ultricies.<br>
+                연세대학교 전기전자 공학부에서는 매년 EE Festival을 개최합니다. 사발통문에서는 작품 출품하게 되는데 동아리 회원들은 직접 작품의 설계부터 시작해서 완제품을 만들어 내게 됩니다.<br>
               </div>
             </div>
             <div class="grid_3">
               <div class="offer"> <img src="images/design.png" alt="Design">
                 <div class="title">하드웨어 세미나</div>
-                Lorem ipsum dolor sit amet, consect etur adip scing elit. Vestibulum ut tortor urnati dunt dolor. Nunc vulputate ultrices con sect etur donec semper lacinia ultricies.<br>
+                SBTM은 매주 하드웨어 세미나를 1시간씩 신입회원님들을 위한 세미나를 개최하고 있습니다. '나는 전기전자 전공이 아니다, 심지어 나는 이공계도 아니다'라고 해도 동아리 활동에 전혀 문제가 없는 이유가 여기 있습니다.<br>
               </div>
             </div>
             <div class="grid_3 last-col">
               <div class="offer"> <img src="images/prototype.png" alt="Prototype">
                 <div class="title">소프트웨어 세미나</div>
-                Lorem ipsum dolor sit amet, consect etur adip scing elit. Vestibulum ut tortor urnati dunt dolor. Nunc vulputate ultrices con sect etur donec semper lacinia ultricies.<br>
+                SBTM은 매주 소프트웨어 세미나를 1시간씩 신입회원님들을 위한 세미나를 개최하고 있습니다. 매틀랩, JAVA, C++등의 여러 종류의 세미나를 개최합니다.<br>
               </div>
             </div>
             <div class="grid_3 ">
               <div class="offer"> <img src="images/development.png" alt="Development">
                 <div class="title">지능형 모형차 대회</div>
-                Lorem ipsum dolor sit amet, consect etur adip scing elit. Vestibulum ut tortor urnati dunt dolor. Nunc vulputate ultrices con sect etur donec semper lacinia ultricies.<br>
+                한양대학교 Acelab에서는 매년 '지능형 모형차 대회'를 개최합니다. 사발통문에서는 작년 처음 출전하여 본선진출의 우수한 성적을 거두었습니다.<br>
               </div>
             </div>
             <div class="grid_3 ">
               <div class="offer"> <img src="images/testing.png" alt="Testing">
-                <div class="title">캠프</div>
-                Lorem ipsum dolor sit amet, consect etur adip scing elit. Vestibulum ut tortor urnati dunt dolor. Nunc vulputate ultrices con sect etur donec semper lacinia ultricies.<br>
+                <div class="title">로봇 제작</div>
+                사발통문은 로봇 제작 동아리입니다. 평소 활동으로 팀을 이루어 로봇을 제작합니다.<br>
               </div>
             </div>
             <div class="grid_3 last-col ">
               <div class="offer"> <img src="images/delivery.png" alt="Delivery">
                 <div class="title">다른 동아리 활동</div>
-                Lorem ipsum dolor sit amet, consect etur adip scing elit. Vestibulum ut tortor urnati dunt dolor. Nunc vulputate ultrices con sect etur donec semper lacinia ultricies.<br>
+                나도 연고전, 아카라카에 참석하고 싶은데! 나도 MT를 가고싶은데! SBTM이라면 문제 없습니다. 다수의 MT활동, 인간적인 사람들이 모인 SBTM과 함께라면 활기차고 밝은 대학생활이 가능합니다!<br>
               </div>
             </div>
           </div>
@@ -198,8 +171,8 @@
       <div class="wrapper featured_work">
         <article class="grid_3">
           <h2>주요 작품</h2>
-          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-          <a href="project-details.html" class="arrowlink">Details</a>&nbsp; <a href="contact.html" class="arrowlink">Contact Us</a> </article>
+          <p>사발통문에서 지금까지 만듯 작품을 소개합니다. </p>
+          <a href="project-details.html" class="arrowlink">더 많은 로봇 보기</a>&nbsp; </article>
         <article class="grid_9 last">
           <div class="flexslider" id="home-page-slider-secondary">
             <ul class="slides">
@@ -264,8 +237,7 @@
       <div class="wrapper">
         <div class="grid_6">
           <h2>About</h2>
-          <p>Hi, we are Wee - a creative agency! 
-            Wee emphasizes clean displays of content while facilitating great user experiences.</p>
+          <p>연세대학교 공과대학 소속 동아리 사발통문입니다.</p>
           <ul class="social">
             <li> <a href="#">
               <figure><img src="images/soc1.png" width="31" height="24" alt=""></figure>
@@ -283,7 +255,7 @@
         </div>
         <div class="grid_3">
           <h2>Copyright</h2>
-          This includes all content and original design work, including the distinctive typographic style, layout and composition of this website. </div>
+          &copy; Yonsei SBTM. All rights reserved. </div>
         <div class="grid_3 last-col">
           <h2>Navigate</h2>
           <ul class="navigate">
