--- a/projects.html
+++ b/projects.html
@@ -24,46 +24,12 @@
 <div class="block1 p_bottom_zero">
   <div class="container_12"> 
     <!--==============================header=================================-->
-    <header>
-      <h1><a class="logo" href="index.html"><span class="underline">We</span>e</a></h1>
+    <header class="homepage">
+      <h1><a class="logo" href="index.html">SBTM <span class="underline">Lab.</span></a></h1>
       <nav>
         <ul class="sf-menu">
           <li><a href="index.html">Home</a></li>
-          <li ><a href="services.html">Services</a></li>
-          <li class="current"><a href="javascript:">Projects</a>
-            <ul>
-              <li><a href="project-threecol.html">Three Cols </a></li>
-              <li><a href="project-fourcol.html">Four Cols</a></li>
-              <li><a href="project-details.html">Project Details</a></li>
-            </ul>
-          </li>
-          <li > <a href="javascript:">Pages</a>
-            <ul>
-              <li ><a href="javascript:">Home</a>
-                <ul>
-                  <li><a href="index.html">With Slider</a></li>
-                  <li><a href="index2.html">Second Slider</a></li>
-                  <li><a href="index3.html">Without Slider</a></li>
-                </ul>
-              </li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="javascript:">Pricing</a>
-                <ul>
-                  <li><a href="pricing-threecol.html">Three Cols</a></li>
-                  <li><a href="pricing-fourcol.html">Four Cols</a></li>
-                </ul>
-              </li>
-              <li><a href="components.html">Components</a></li>
-              <li><a href="404.html">404</a></li>
-              <li><a href="faq.html">FAQ</a></li>
-            </ul>
-          </li>
-          <li><a href="javascript:">Blog</a>
-            <ul>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="blog-single.html">Blog Single</a></li>
-            </ul>
-          </li>
+          <li class="current"><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -87,40 +53,33 @@
     <section class="content">
       <div class="wrapper">
         <article class="grid_12 last-col">
-          <div class="hello_box"> We love Mondays! We have a real passion for design and have worked hard to earn our reputation. Let our works speak for us. </div>
+          <div class="hello_box"> 사발통문에서 지금까지 진행한 프로젝트들을 소개합니다.</div>
         </article>
       </div>
       <div class="wrapper projects">
         <article class="grid_3">
           <h2>Filter</h2>
           <ul class="project-filter">
-            <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".websites">Websites</a></li>
-            <li><a href="#" data-filter=".print">Print</a></li>
-            <li><a href="#" data-filter=".applications" >Application</a></li>
-            <li><a href="#" data-filter=".wordpress">WordPress</a></li>
-            <li><a href="#" data-filter=".content-writing">Content Writing</a></li>
+            <li><a href="#" data-filter="*" class="active">모두보기</a></li>
+            <li><a href="#" data-filter=".eefestival">EE-Festival</a></li>
+            <li><a href="#" data-filter=".seminar">세미나</a></li>
+            <li><a href="#" data-filter=".acelab" >지능형 모형차 경진대회</a></li>
+            <li><a href="#" data-filter=".nomalrobot">로봇 제작</a></li>
+            <li><a href="#" data-filter=".activity">기타 활동</a></li>
           </ul>
         </article>
         <article class="grid_9 last">
           <div class="row clearfix" id="projects">
-            <article class="grid_3 project-item alpha websites"> <a href="#"><img src="images/project-details.jpg" alt="Project 1"/></a> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
-            <article class="grid_3 project-item content-writing"> <img src="images/project-details12.jpg" alt="Project 2"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details12.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
-            <article class="grid_3 project-item omega websites"> <img src="images/project-details3.jpg" alt="Project 3"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details3.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
-            <article class="grid_3 project-item alpha applications"> <img src="images/project-details4.jpg" alt="Project 1"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details4.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
-            <article class="grid_3 project-item print"> <img src="images/project-details5.jpg" alt="Project 2"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details5.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
-            <article class="grid_3 project-item omega wordpress"> <img src="images/project-details6.jpg" alt="Project 3"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details6.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
-            <article class="grid_3 project-item alpha wordpress"> <img src="images/project-details7.jpg" alt="Project 1"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details7.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
-            <article class="grid_3 project-item content-writing"> <img src="images/project-details8.jpg" alt="Project 2"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details8.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
-            <article class="grid_3 project-item omega print"> <img src="images/project-details9.jpg" alt="Project 3"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details9.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item alpha eefestival"> <a href="#"><img src="images/project-details.jpg" alt="Project 1"/></a> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item activity"> <img src="images/project-details12.jpg" alt="Project 2"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details12.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item omega eefestival"> <img src="images/project-details3.jpg" alt="Project 3"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details3.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item alpha acelab"> <img src="images/project-details4.jpg" alt="Project 1"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details4.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item seminar"> <img src="images/project-details5.jpg" alt="Project 2"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details5.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item omega nomalrobot"> <img src="images/project-details6.jpg" alt="Project 3"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details6.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item alpha nomalrobot"> <img src="images/project-details7.jpg" alt="Project 1"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details7.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item activity"> <img src="images/project-details8.jpg" alt="Project 2"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details8.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
+            <article class="grid_3 project-item omega seminar"> <img src="images/project-details9.jpg" alt="Project 3"> <span class="zoom-bg" style="opacity: 0; "> <span class="zoom-icon" style="bottom: 100%;"><a href="images/project-details9.jpg" class="touch-item"></a></span> <span class="zoom-link" style="top: 100%;"><a href="project-details.html">Details</a></span> </span> </article>
           </div>
-          <ul class="projects_pagination">
-            <li><a href="#" class="active">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-          </ul>
         </article>
       </div>
     </section>
