--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-<title>Contact | Wee</title>
+<title>Contact | SBTM Lab.</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width; initial-scale=1.0">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -65,58 +65,9 @@
         <div class="row clearfix">
           <article class="grid_12">
             <h2>문의하기</h2>
-            <p>Join us on <a href="#">Facebook</a>, follow us on <a href="#">Twitter</a> & <a href="#">Pinterest</a> for irregular doses of technology, inspiration & creativity. Pay a visit to our blog <a href="http://www.egrappler.com">eGrappler.com</a>.</p>
-            <form action="#" method="post" id="cform" name="cform">
-              <ul id="homehireus" class="hireform contactform">
-                <li>
-                  <label>Name:<span class="required">*</span></label>
-                  <input name="name" id="name" type="text" value="" tabindex="1">
-                </li>
-                <li>
-                  <label>Phone:</label>
-                  <input name="phone" id="phone" type="text" value="" tabindex="3">
-                </li>
-                <li>
-                  <label>Email:<span class="required">*</span></label>
-                  <input name="email" id="email" type="text" value="" tabindex="2">
-                </li>
-                <li>
-                  <label>Subject:<span class="required"></span></label>
-                  <input name="subject" id="subject" type="text" value="" tabindex="4">
-                </li>
-                <li>
-                  <input type="button" id="send-message" value="Send Details To Wee" tabindex="6">
-                  <div id="output" class="contactpage-msg"></div>
-                </li>
-                <li>
-                  <label>Message:<span class="required"></span></label>
-                  <textarea name="message" id="message" tabindex="5"></textarea>
-                </li>
-              </ul>
-            </form>
+            <p><a href="http://club.cyworld.com/yonsei-sbtm">싸이월드 클럽</a>을 방문하시거나, <a href="https://www.facebook.com/groups/154493074601959/">페이스북</a>을 방문해 주시면 됩니다. 혹은 이메일 <a href="mailto:sbtmlab@gmail.com">sbtmlab@gmail.com</a>로 문의사항을 보내주시면 됩니다..</p>
           </article>
         </div>
-      </div>
-    </section>
-  </div>
-</div>
-<div class="hireus_block offices">
-  <div class="container_12">
-    <section class="">
-      <div class="wrapper">
-        <h2>Offices</h2>
-        <article class="grid_3"> <b>Pakistan </b>
-          <p>123-Greeland Mall Road - Software Technology Park, Lahore.</p>
-        </article>
-        <article class="grid_3"> <b>Dubai</b>
-          <p>123-Greeland Mall Road - Software Technology Park, Lahore.</p>
-        </article>
-        <article class="grid_3"> <b>Singapore </b>
-          <p>123-Greeland Mall Road - Software Technology Park, Lahore.</p>
-        </article>
-        <article class="grid_3"> <b>China </b>
-          <p>123-Greeland Mall Road - Software Technology Park, Lahore.</p>
-        </article>
       </div>
     </section>
   </div>
@@ -128,36 +79,28 @@
       <div class="wrapper">
         <div class="grid_6">
           <h2>About</h2>
-          <p>Hi, we are Wee - a creative agency! 
-            Wee emphasizes clean displays of content while facilitating great user experiences.</p>
+          <p>연세대학교 공과대학 소속 동아리 사발통문입니다.</p>
           <ul class="social">
-            <li> <a href="#">
-              <figure><img src="images/soc1.png" width="31" height="24" alt=""></figure>
-              Follow us on Twitter</a> </li>
-            <li> <a href="#">
+            <li> <a href="https://www.facebook.com/groups/154493074601959/">
               <figure><img src="images/soc2.png" width="31" height="26" alt=""></figure>
               Join us on Facebook</a> </li>
-            <li> <a href="#">
-              <figure><img src="images/soc3.png" width="31" height="26" alt=""></figure>
-              Subscribe to our blog</a> </li>
-            <li class="cont_item m_bottom_zero"> <a href="index-5.html">
+            <li> <a href="http://club.cyworld.com/yonsei-sbtm">
+              <figure><img src="custom/cyworld.png" width="31" height="31" alt=""></figure>
+              Join us on Cyworld</a> </li>
+            <li class="cont_item m_bottom_zero"> <a href="contact.html">
               <figure><img src="images/soc4.png" width="31" height="20" alt=""></figure>
               Contact Us</a> </li>
           </ul>
         </div>
         <div class="grid_3">
           <h2>Copyright</h2>
-          This includes all content and original design work, including the distinctive typographic style, layout and composition of this website. </div>
+          &copy; Yonsei SBTM. All rights reserved. </div>
         <div class="grid_3 last-col">
           <h2>Navigate</h2>
           <ul class="navigate">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Components</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
