--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
           <!-- SLIDERIGHT -->
           <li data-transition="slideleft"> <img src="images/img3.jpg" alt="" />
             <div class="caption lft boxshadow" data-x="10" data-y="50" data-speed="900" data-start="1300" data-easing="easeOutExpo">
-             
-              <iframe width="420" height="315" src="http://youtu.be/MIaY5CF0l1Q" frameborder="0" allowfullscreen></iframe>
-              
+              <iframe width="420" height="315" src="https://www.youtube.com/embed/MIaY5CF0l1Q" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="caption lfr big_black_bg" data-x="700" data-y="50" data-speed="300" data-start="1600" data-easing="easeOutExpo">SBTM</div>
             <div class="caption lfb small_black_bg" data-x="700" data-y="130" data-speed="300" data-start="1800" data-easing="easeOutExpo">2014년 <br/>신입생 새터 홍보 동영상 </div>
