--- a/contact.html
+++ b/contact.html
@@ -51,21 +51,23 @@
     <section class="content">
       <div class="wrapper">
         <article class="grid_12 last-col">
-          <div class="hello_box">신입회원은 상시 모집중입니다. 그밖에 어떤 연락이라도 기다리고 있습니다.</div>
+          <div class="hello_box">저희 사발통문은 미래를 주도하는 핵심사업으로 주목 받는 '로봇'이라는 산업분야를 학부시절에 직접 몸으로 느껴볼 수 있는 귀중한 기회의 장이 될 것 입니다.<br/>
+로봇에 관심이 있고 열정이 있는 분이라면, 사발통문은 누구라도 두 팔 벌려 환영합니다!!</div>
         </article>
       </div>
       <div class="wrapper projects">
         <div class="row clearfix">
           <article class="grid_12">
             <div class="gmap">
-              <iframe src="https://dna.daum.net/include/tools/routemap/map_view.php?width=940&height=350&latitude=37.56167514355792&longitude=126.93560183202871&contents=%EC%97%B0%EC%84%B8%EB%8C%80%ED%95%99%EA%B5%90+%EC%A0%9C3%EA%B3%B5%ED%95%99%EA%B4%80%3Cbr+%2F%3E%0D%0AC110+%EC%82%AC%EB%B0%9C%ED%86%B5%EB%AC%B8&zoom=3" width="940" height="385" scrolling="no" frameborder="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d907.2024921564338!2d126.93468842536795!3d37.56179095151513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9892f9a5837d%3A0x9259bf7c69a510d5!2z7ISc7Jq47Yq567OE7IucIOyXsO2drOuPmSDsl7DshLjrjIDtlZnqtZAg7KCcM-qzte2Vmeq0gA!5e0!3m2!1sko!2skr!4v1457410974308" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </article>
         </div>
         <div class="row clearfix">
           <article class="grid_12">
             <h2>문의하기</h2>
-            <p><a href="http://club.cyworld.com/yonsei-sbtm">싸이월드 클럽</a>을 방문하시거나, <a href="https://www.facebook.com/groups/154493074601959/">페이스북</a>을 방문해 주시면 됩니다. 혹은 이메일 <a href="mailto:sbtmlab@gmail.com">sbtmlab@gmail.com</a>로 문의사항을 보내주시면 됩니다..</p>
+            <p><a href="http://club.cyworld.com/yonsei-sbtm">싸이월드 클럽</a>을 방문하시거나, <a href="https://www.facebook.com/sbtmrecruiting/">페이스북</a>을 방문해 주시면 됩니다. 혹은 이메일 <a href="mailto:sbtmlab@gmail.com">sbtmlab@gmail.com</a>로 문의사항을 보내주시면 됩니다..</p>
+            <p>(회장) 이승남 010-8787-6441 <br/>(부회장) 윤여훈 010-9863-1511</p>
           </article>
         </div>
       </div>
